feat: go: migrated /user/email/send-verification-email (#485)
